recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:2: error: not found: type double
 	var nbPas : double = 100.00;
                    ^FourSquare:3: error: not found: type double
  var angle : double = 90.00;
              ^