recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
 	var nbPas : double = 100.00;
  var angle : double = 90.00;
  
  avance(nbPas);
  droite(angle);
  avance(nbPas);
  droite(angle);
  avance(nbPas);
	droite(angle);
  avance(nbPas);
  droite(2*angle);
  
  
}
